@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-07T16:08:54Z",
+  "timestamp" : "2022-08-08T00:39:14Z",
   "count_outdated" : 1795,
   "uniques_outdated" : 120,
-  "count" : 1817,
+  "count" : 1834,
   "uniques" : 128,
   "views" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 12, 12 ],
+      "count": 29,
+      "count_minmax": [ 12, 29 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
