@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 39,
   "uniques": 2,
   "views": [
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 12,
+      "count": 29,
       "uniques": 1
     }
   ]
