@@ -1,3 +1,10 @@
+2022-08-08T00:39:14Z:
+* notice: last 14d: unq all: 2 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 120 1795 / 128 1817
+* notice: next accum: outdated-unq outdated-all / unq all: 120 1795 / 128 1834
+* notice: prev exec diff / last date diff / accum: unq all: +0 +17 -0 -0 / +1 +29 -0 -0 / 1 29
+* notice: removed / changed dates: [] / [2022-08-07]
+
 2022-08-07T16:08:54Z:
 * notice: last 14d: unq all: 2 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 120 1795 / 127 1805
